[Feature] Added Remaining DTOMapper